JG-2004-04-20-2: Enhancem.: qmake: In dynamic allocation mode it is now possible
                            to specify resource requests for individual make 
                            rules.
                 Changed:   qmake
                 Review:    SG

AA-2004-04-20-2: Bugfix:    fixed install script, typo, tmp dir
                 Review:    MD
                 Changed:   inst_qmaster.sh, inst_execd.sh
               
JG-2004-04-20-1: Bugfix:    fixed linking of binaries doing dynamic loading on 
                            LINUX architectures.
                 Review:    AA

AA-2004-04-20-1: Bugfix:    qmon fixes:
                 - interactive jobs,
                 - blanks in complex attributes
                 - delete time editability
                 - job del deleted all instead of selected jobs
                 - hostgroup member add callback
                 Changed:   qmon
                 Issue:     582, 729, 840, 938, 382, 279
                 Review:    EB
                 
AS-2004-04-20-0: Bugfix:    MPI PE description update
                            SunHPCT reference update
                            removed loose integration with HPCT
                            moved tight integration scripts to mpi/SunHPCT5
                            minor update to mpi/SunHPCT5/README

SG-2004-04-20-0: Bugfix:    fixed the scheduler profiling
                 Changed:   scheduler
                 Review:    JG

AA-2004-04-20-0: Bugfix:    compiler problem fixes
                            
EB-2004-04-19-0: Bugfix:    stale resource_unknown_list
                 Issue:     942
                 Changed:   sge_qmaster
                 Review:    JG

JG-2004-04-20-0: Enhancem.: Make dynamic spooling the default build rule,
                            statically linked spooling methods can be choosen
                            in aimk with the switches -spool-berkeleydb and
                            -spool-classic.