@@ -281,6 +281,8 @@
 #define MSG_CENTRY_QINOTALLOWED        _MESSAGE(64303, _("Queue instance names are not allowed in -l resource requests\n"))
 #define MSG_OBJECT_VALUENOTULONG_S     _MESSAGE(64304, _(SFQ" is not an u_long32 value\n"))
 #define MSG_CQUEUE_INVALIDDOMSETTING_SS _MESSAGE(64305, _("Did not modify "SFQ" for host group "SFQ" which does not exist.\n"))
-#define MSG_HGRP_INVALIDHOSTGROUPNAME_S     _MESSAGE(64306, _("host group name "SFQ" is not valid\n"))
+#define MSG_HGRP_INVALIDHOSTGROUPNAME_S   _MESSAGE(64306, _("host group name "SFQ" is not valid\n"))
+#define MSG_WEIGHTFACTNONUMB_S         _MESSAGE(64307, _("\"load_formula\" uses "SFQ" as weighting factor (only numbers are allowed)\n"))
+#define MSG_MULTIPLEWEIGHTFACT         _MESSAGE(64308, _("\"load_formula\" may not use multiple weighting factors\n"))
 
 #endif /* __MSG_SGEOBJLIB_H */
